Add module deadline support
